--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="500dp"
@@ -14,10 +15,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="350dp"
-            android:layout_height="350dp"
+            android:layout_width="0dp"
+            android:layout_height="380dp"
             android:layout_marginBottom="95dp"
             android:background="@drawable/top_three_pillar"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -25,16 +27,181 @@
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent" />
 
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/iv_top_one"
+            android:layout_width="100dp"
+            android:layout_height="105dp"
+            android:background="@drawable/round_shape"
+            app:layout_constraintBottom_toBottomOf="@+id/frame_one"
+            app:layout_constraintEnd_toEndOf="@+id/frame_one"
+            app:layout_constraintStart_toStartOf="@+id/frame_one"
+             />
         <ImageView
-            android:layout_width="110dp"
-            android:layout_height="120dp"
+            android:id="@+id/frame_one"
+            android:layout_width="130dp"
+            android:layout_height="140dp"
             android:background="@drawable/ld_top_01"
             app:layout_constraintBottom_toBottomOf="@+id/imageView"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.353" />
+            app:layout_constraintVertical_bias="0.15" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:gravity="center"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/frame_one"
+            >
+
+            <TextView
+                android:id="@+id/tv_topper"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Toppers name"
+                android:textColor="@color/white"/>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/ic_coin"/>
+                <TextView
+                    android:id="@+id/tv_toopers_coin"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="10008899"
+                    android:textColor="@color/white"/>
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/iv_top_two"
+            android:layout_width="68dp"
+            android:layout_height="72dp"
+            android:background="@drawable/round_shape"
+            app:layout_constraintBottom_toBottomOf="@+id/frame_two"
+            app:layout_constraintEnd_toEndOf="@+id/frame_two"
+            app:layout_constraintStart_toStartOf="@+id/frame_two"
+            />
+        <ImageView
+            android:id="@+id/frame_two"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_marginTop="105dp"
+            android:background="@drawable/ld_top_02"
+            app:layout_constraintHorizontal_bias="0.096"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="@id/imageView" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:gravity="center"
+            app:layout_constraintHorizontal_bias="0.096"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/frame_two"
+            >
+
+            <TextView
+                android:id="@+id/tv_second"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Seconds name"
+                android:textSize="12sp"
+                android:textColor="@color/white"/>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center"
+                >
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/ic_coin"/>
+                <TextView
+                    android:id="@+id/tv_seconds_coin"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="10008899"
+                    android:textSize="12sp"
+                    android:textColor="@color/white"/>
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/iv_top_three"
+            android:layout_width="60dp"
+            android:layout_height="65dp"
+            android:background="@drawable/round_shape"
+            app:layout_constraintBottom_toBottomOf="@+id/frame_three"
+            app:layout_constraintEnd_toEndOf="@+id/frame_three"
+            app:layout_constraintStart_toStartOf="@+id/frame_three"
+            />
+        <ImageView
+            android:id="@+id/frame_three"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginTop="132dp"
+            android:background="@drawable/ld_top_03"
+            app:layout_constraintHorizontal_bias="0.918"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="@id/imageView" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:gravity="center"
+            app:layout_constraintHorizontal_bias="0.918"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/frame_three"
+            >
+
+            <TextView
+                android:id="@+id/tv_third"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Thirds name"
+                android:textSize="10sp"
+                android:textColor="@color/white"/>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/ic_coin"/>
+                <TextView
+                    android:id="@+id/tv_thirds_coin"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="10008899"
+                    android:textSize="12sp"
+                    android:textColor="@color/white"/>
+
+            </LinearLayout>
+
+        </LinearLayout>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
