--- a/app/src/main/res/layout/item_member.xml
+++ b/app/src/main/res/layout/item_member.xml
@@ -2,8 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="10dp"
+    android:padding="2dp"
     android:orientation="horizontal"
     android:gravity="center_vertical">
     <TextView
@@ -20,7 +19,7 @@
         android:id="@+id/img"
         android:layout_width="0dp"
         android:layout_weight="0.3"
-        android:layout_height="100dp"
+        android:layout_height="80dp"
         android:scaleType="centerCrop"
         android:padding="2dp"
         />
@@ -54,8 +53,10 @@
                 android:background="@drawable/pink_rectangle"
                 android:orientation="horizontal"
                 android:gravity="center_vertical"
-                android:layout_marginEnd="5dp"
-                android:padding="2dp"
+                android:layout_marginEnd="10dp"
+                android:paddingTop="2dp"
+                android:paddingBottom="2dp"
+                android:paddingEnd="2dp"
                 >
 
                 <ImageView
@@ -78,6 +79,7 @@
                 android:background="@drawable/blue_rectangle"
                 android:orientation="horizontal"
                 android:gravity="center_vertical"
+                android:paddingEnd="2dp"
                 >
                 <ImageView
                     android:layout_width="wrap_content"
