--- a/app/src/main/res/layout/item_member.xml
+++ b/app/src/main/res/layout/item_member.xml
@@ -84,7 +84,7 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_gander"/>
+                    android:src="@drawable/ic_gender"/>
                 <TextView
                     android:id="@+id/tv_gender"
                     android:layout_width="wrap_content"
@@ -116,14 +116,7 @@
             android:layout_margin="2dp"/>
     </LinearLayout>
 
-<!--    <TextView-->
-<!--        android:layout_width="0dp"-->
-<!--        android:layout_weight="0.3"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text="0"-->
-<!--        android:textSize="20dp"-->
-<!--        android:textStyle="bold"-->
-<!--        android:gravity="center"/>-->
+
 
 
 
