--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".activities.MainActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -27,7 +27,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Leaderboard"
+                android:text="@string/leaderboard"
                 android:layout_gravity="center"
                 android:textColor="@color/white"
                 android:textSize="25sp" />
@@ -38,8 +38,9 @@
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/upper_part"
         android:layout_width="match_parent"
-        android:layout_height="500dp"
+        android:layout_height="@dimen/upper_part_height"
         android:background="@drawable/background"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -61,7 +62,7 @@
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/iv_top_one"
             android:layout_width="100dp"
-            android:layout_height="105dp"
+            android:layout_height="100dp"
             android:background="@drawable/round_shape"
             app:layout_constraintBottom_toBottomOf="@+id/frame_one"
             app:layout_constraintEnd_toEndOf="@+id/frame_one"
@@ -69,8 +70,8 @@
              />
         <ImageView
             android:id="@+id/frame_one"
-            android:layout_width="130dp"
-            android:layout_height="130dp"
+            android:layout_width="@dimen/first_frame_width"
+            android:layout_height="@dimen/first_frame_height"
             android:background="@drawable/ld_top_01"
             app:layout_constraintBottom_toBottomOf="@+id/imageView"
             app:layout_constraintEnd_toEndOf="parent"
@@ -93,7 +94,7 @@
                 android:id="@+id/tv_topper"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Toppers name"
+                tools:text="Toppers name"
                 android:textColor="@color/white"/>
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -108,7 +109,7 @@
                     android:id="@+id/tv_toopers_coin"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="10008899"
+                    tools:text="10008899"
                     android:textColor="@color/white"/>
 
             </LinearLayout>
@@ -126,8 +127,8 @@
             />
         <ImageView
             android:id="@+id/frame_two"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
+            android:layout_width="@dimen/second_frame_width"
+            android:layout_height="@dimen/second_frame_height"
             android:layout_marginTop="105dp"
             android:background="@drawable/ld_top_02"
             app:layout_constraintHorizontal_bias="0.096"
@@ -149,7 +150,7 @@
                 android:id="@+id/tv_second"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Seconds name"
+                tools:text="Seconds name"
                 android:textSize="12sp"
                 android:textColor="@color/white"/>
             <LinearLayout
@@ -166,7 +167,7 @@
                     android:id="@+id/tv_seconds_coin"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="10008899"
+                    tools:text="10008899"
                     android:textSize="12sp"
                     android:textColor="@color/white"/>
 
@@ -186,11 +187,11 @@
             />
         <ImageView
             android:id="@+id/frame_three"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_marginTop="132dp"
+            android:layout_width="@dimen/third_frame_width"
+            android:layout_height="@dimen/third_frame_height"
+            android:layout_marginTop="128dp"
             android:background="@drawable/ld_top_03"
-            app:layout_constraintHorizontal_bias="0.918"
+            app:layout_constraintHorizontal_bias="0.9"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="@id/imageView" />
@@ -199,7 +200,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:gravity="center"
-            app:layout_constraintHorizontal_bias="0.918"
+            app:layout_constraintHorizontal_bias="0.9"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/frame_three"
@@ -209,8 +210,8 @@
                 android:id="@+id/tv_third"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Thirds name"
-                android:textSize="10sp"
+                tools:text="Thirds name"
+                android:textSize="12sp"
                 android:textColor="@color/white"/>
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -225,7 +226,7 @@
                     android:id="@+id/tv_thirds_coin"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="10008899"
+                    tools:text="10008899"
                     android:textSize="12sp"
                     android:textColor="@color/white"/>
 
@@ -239,7 +240,7 @@
     <LinearLayout
         android:id="@+id/whiteShape"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
+        android:layout_height="@dimen/white_shape_height"
         android:gravity="center"
         android:orientation="vertical"
         android:background="@drawable/white_shape"
@@ -251,8 +252,8 @@
             android:id="@+id/rv_member_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="80dp"
-            android:padding="10dp"
+            android:layout_marginTop="@dimen/rv_margin_top"
+            android:padding="@dimen/rv_padding"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             />
 
