--- a/app/src/main/res/layout/item_member.xml
+++ b/app/src/main/res/layout/item_member.xml
@@ -2,7 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:padding="2dp"
+    android:layout_marginBottom="10dp"
     android:orientation="horizontal"
     android:gravity="center_vertical">
     <TextView
@@ -10,7 +12,7 @@
         android:layout_width="0dp"
         android:layout_weight="0.1"
         android:layout_height="wrap_content"
-        android:text="0"
+        tools:text="10"
         android:textSize="20sp"
         android:textStyle="bold"
         android:gravity="center"/>
@@ -18,15 +20,15 @@
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/img"
         android:layout_width="0dp"
-        android:layout_weight="0.3"
-        android:layout_height="80dp"
+        android:layout_weight="0.25"
+        android:layout_height="70dp"
         android:scaleType="centerCrop"
         android:padding="2dp"
         />
 
     <LinearLayout
         android:layout_width="0dp"
-        android:layout_weight="0.4"
+        android:layout_weight="0.45"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:gravity="center">
@@ -35,10 +37,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
-            android:text="Name"
+            tools:text="Name here"
             android:textSize="17sp"
             android:textStyle="bold"
-            android:padding="5dp"/>
+            android:padding="5dp"
+            android:layout_marginBottom="5dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -63,12 +66,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:background="@drawable/round_shape"
-                    android:src="@drawable/ic_light" />
+                    android:src="@drawable/ic_light"
+                    android:contentDescription="@string/level" />
                 <TextView
                     android:id="@+id/tv_level"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="150"
+                    tools:text="150"
                     android:textStyle="bold"
                     android:textColor="@color/white"
                     />
@@ -89,7 +93,7 @@
                     android:id="@+id/tv_gender"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Male"
+                    tools:text="Female"
                     android:textColor="@color/white"
                     />
             </LinearLayout>
@@ -111,7 +115,8 @@
             android:id="@+id/tv_gift_coin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="100"
+            tools:text="100"
+            android:textColor="@color/pink"
             android:textStyle="bold"
             android:layout_margin="2dp"/>
     </LinearLayout>
